Split src into `core` and `example` (#52)
* Move 'examples' out of src

* remove duplication